# AzulZero

./: .gitignore  CMakeLists.txt  GUI.cpp  GUI.h  README.md  Tree.h  board.cpp  board.cpp.autosave  board.h  board.h.autosave  controller.cpp  controller.h  game.cpp  game.h  interface.cpp  interface.h  main.cpp
